        Changes between published versions

0.8 to 0.9

- highrestest with optional integer parameter does a 10 second
  with 10000 sleeps for statistics about actual presision
  (try 'highrestest 500')

- new program cleancp that can be used instead of improvefile

- new option --dsyncs-per-second for bufhrt, used in improvefile

0.7 to 0.8

- now using resample_soxr in example script with upsampling.

- added option -I for 32-bit integer output to resample_soxr.

- added experimental programs clreg/clref86 to clean CPU registers,
  see INSTALL file.

- added assembler code for refreshing memory for aarch86 and x86_64.

- enabled files > 2G in all input and output.

- added some missing short options to playhrt.

- added option --precision to resample_soxr.

- added --replay-gain option to resample_soxr and volrace.

- fixed possible segfault of resample_soxr in rare
  cases of parameter combinations involving RACE.

- added experimental --stripped option for playhrt.

- added --skip option for 'writeloop' with input from a file.

- added --dsync option for 'bufhrt', to force fast writing to hardware.

- added utility 'resample_soxr' for highest quality resampling with
  64 bit operations (abilities of reading files as with 'cat64' and 
  filtering output as with 'volrace' are built into this program).

- added utility 'cat64' to translate audio file or shared memory to 
  raw 64 bit floating point samples.

- added option --max-bad-reads to 'playhrt' (program stops when given 
  number of input blocks was too small, the value 4 was hardcoded before)

- added option --force-shm to 'writeloop' (overwrites semaphores left
  over from other calls).

- now using 'memclean' in 'writeloop'.

- using additional register/variable for refreshing of memory. Causes
  again a surprising improvement of sound in my system.

- various improvements in wording of help texts and verbose messages.

- new options --no-buf-stats and --no-delay-stats and explanation of